--- a/Cocoon/Views/Orders/Details.cshtml
+++ b/Cocoon/Views/Orders/Details.cshtml
@@ -1,6 +1,9 @@
 ﻿@model G4Fit.Models.Domains.Order
+@using G4Fit.Models.Enums
+@using Cocoon.Resources
 @{
     Layout = "~/Views/Dashboard/Layout.cshtml";
+    var culture = System.Globalization.CultureInfo.CurrentUICulture.TwoLetterISOLanguageName.ToLowerInvariant();
     ViewBag.Title = "تفاصيل الطلب رقم " + Model.Code;
 }
 <div class="row">
@@ -157,6 +160,22 @@
                                     الاجمالى: @Model.Total ريال سعودي <br />
                                 </td>
                             </tr>
+                            @if (Model.PurposeOfSubscription != null)
+                            {
+                                <tr>
+                                    <td>@Website.PurposeOfSubscription</td>
+                                    <td>
+                                        @if (Model.PurposeOfSubscription == PurposeOfSubscription.Muscle_Building)
+                                        {@(culture == "ar" ? $"كتله عضليه" : $"Muscle Building")}
+                                        else if (Model.PurposeOfSubscription == PurposeOfSubscription.Weight_Gain)
+                                        { @(culture == "ar" ? $"زياده وزن" : $"Weight Gain")}
+                                        else if (Model.PurposeOfSubscription == PurposeOfSubscription.General_Health)
+                                        { @(culture == "ar" ? $"صحه عامه" : $"General Health")}
+                                        else if (Model.PurposeOfSubscription == PurposeOfSubscription.Weight_Loss)
+                                        { @(culture == "ar" ? $"خسارة وزن" : $"Weight Loss")}
+                                    </td>
+                                </tr>
+                            }
                             <tr>
                                 <td>
                                     هل تم الدفع؟
