--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -7,6 +7,7 @@
         color: black;
         font-weight: 600;
     }
+
     .feature-item__content {
         background: #000000;
     }
@@ -18,14 +19,17 @@
         border-radius: 5px;
         overflow: hidden;
     }
+
     .feature-item__icon h3 {
         color: #fff;
         font-size: 18px;
         opacity: .9;
     }
+
     .feature-item h3 {
         font-family: dinnextltw23-medium;
     }
+
     .salla-theme_4 .feature-item__content .feature-item__icon {
         display: flex;
         align-items: center;
@@ -39,8 +43,7 @@
     }
 
     .feature-item__icon {
-      
-        -webkit-box-align: center;    
+        -webkit-box-align: center;
         -webkit-box-pack: center;
         width: 100%;
         min-height: 100px;
@@ -49,6 +52,7 @@
         font-size: 50px;
         text-align: center;
     }
+
     .salla-theme_4 .feature-item__content p {
         padding: 1rem;
     }
@@ -57,20 +61,24 @@
         color: #fff;
         font-size: 14px;
     }
-        a:hover {
-            text-decoration: none;
-        }
+
+    a:hover {
+        text-decoration: none;
+    }
 
     #payment-image {
         width: 40%;
     }
-    #maarof-image{
-        width:20%;
+
+    #maarof-image {
+        width: 20%;
     }
-    @@media(max-width:767px){
-        #payment-image{
-            width:100%;
+
+    @@media(max-width:767px) {
+        #payment-image {
+            width: 100%;
         }
+
         #maarof-image {
             width: 11%;
         }
@@ -80,7 +88,7 @@
 {
     <style>
         footer ul li {
-            direction:ltr !important;
+            direction: ltr !important;
         }
     </style>
 }
@@ -124,12 +132,12 @@
                 <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "معلومات الشركة" : "About Company")</h6>
                 <br />
                 <ul>
-                    <li><a href="@Url.Action("About","Home")">@(culture == "ar" ? "نبذة عن G4Fit" : "About G4Fit")</a></li>
+                    <li><a href="@Url.Action("About", "Home")">@(culture == "ar" ? "نبذة عن G4Fit" : "About G4Fit")</a></li>
                     <li><a href="@Url.Action("Index", "Privacy")">@(culture == "ar" ? "سياسة الخصوصية" : "Privacy policy")</a></li>
                     <li><a href="@Url.Action("Index", "DeliveryRules")">@(culture == "ar" ? "شروط التوصيل" : "Terms of delivery")</a></li>
                     <li><a href="@Url.Action("Index", "Terms")">@(culture == "ar" ? "الشروط والاحكام" : "Terms and Conditions")</a></li>
                     @*<li><a href="@Url.Action("Affiliate", "Suppliers")">@(culture == "ar" ? "البيع معنا" : "Sell with us")</a></li>
-                    <li><a href="@Url.Action("Policy", "Suppliers")">@(culture == "ar" ? "شروط وأحكام البائع" : "Selling Policy")</a></li>*@
+                        <li><a href="@Url.Action("Policy", "Suppliers")">@(culture == "ar" ? "شروط وأحكام البائع" : "Selling Policy")</a></li>*@
                 </ul>
             </div>
             <!--<div class="col-sm-6 col-md-3 col-lg-3">
@@ -150,17 +158,17 @@
                             </div>
                         </div>
                     </li>-->
-                    @*<li>
-                        <div class="row">
-                            <div class="col-12 text-center">
-                                <a href="https://maroof.sa/119037" target="_blank" style="font-size:15px">
-                                    <img src="~/Content/web/img/maaroof.png" id="maarof-image" class="img-fluid my-2" /><br />
-                                    الموقع موثق في موقع معروف بوزارة التجارة
-                                </a>
-                            </div>
+            @*<li>
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <a href="https://maroof.sa/119037" target="_blank" style="font-size:15px">
+                                <img src="~/Content/web/img/maaroof.png" id="maarof-image" class="img-fluid my-2" /><br />
+                                الموقع موثق في موقع معروف بوزارة التجارة
+                            </a>
                         </div>
-                    </li>*@
-                <!--</ul>
+                    </div>
+                </li>*@
+            <!--</ul>
 
 
 
@@ -184,26 +192,38 @@
                     <li style="font-weight:600;color:black">
                         @(culture == "ar" ? "تابعنا على" : "Follow us"):
                         <br />
-                        <a style="margin:4px;" href="@(Model.About != null ? Model.About.Facebook : "#")"><i class="fab fa-facebook"></i></a>
-                        <a style="margin:4px;" href="@(Model.About != null ? Model.About.Twitter : "#")"><i class="fab fa-twitter"></i></a>
-                        <a style="margin:4px;" href="@(Model.About != null ? Model.About.Instagram : "#")"><i class="fab fa-instagram"></i></a>
-                        <a style="margin:4px;" href="@(Model.About != null ? Model.About.YouTube : "#")"><i class="fab fa-youtube"></i></a>
-                        <a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")"><i class="fab fa-snapchat"></i></a>
-                        @if (Model.About != null && Model.About.TikTok != null)
+                        @if (Model.About != null && Model.About.WhatsApp != null)
+                        {<a style="margin:4px;" href="@Model.About.WhatsApp"><i class="fab fa-whatsapp"></i></a>}
+                        @if (Model.About != null && Model.About.Facebook != null)
+                        {<a style="margin:4px;" href="@Model.About.Facebook"><i class="fab fa-facebook"></i></a>}
+                        @if (Model.About != null && Model.About.Twitter != null)
+                        {<a style="margin:4px;" href="@Model.About.Twitter"><i class="fab fa-twitter"></i></a>
+                        }
+                        @if (Model.About != null && Model.About.Instagram != null)
+                        {<a style="margin:4px;" href="@Model.About.Instagram"><i class="fab fa-instagram"></i></a>
+                        }
+                        @if (Model.About != null && Model.About.YouTube != null)
+                        {<a style="margin:4px;" href="@Model.About.YouTube"><i class="fab fa-youtube"></i></a>
+                        }
+                        @if (Model.About != null && Model.About.SnapChat != null)
+                        {<a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")"><i class="fab fa-snapchat"></i></a>
+                        } @if (Model.About != null && Model.About.TikTok != null)
                         {
-            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")"><i class="fab fa-tiktok"></i></a>}
+                            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+                            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")">  <i class="bi bi-tiktok"></i></a>
+                        }
                     </li>
                 </ul>
             </div>
             @*<div class="col-12">
-                <div class="row">
-                    <div class="col-6 text-center m-auto">
-                        <br />
-                        <br />
-                        <img id="payment-image" src="~/Content/web/img/payments.png" class="img-fluid" />
+                    <div class="row">
+                        <div class="col-6 text-center m-auto">
+                            <br />
+                            <br />
+                            <img id="payment-image" src="~/Content/web/img/payments.png" class="img-fluid" />
+                        </div>
                     </div>
-                </div>
-            </div>*@
+                </div>*@
         </div>
     </div>
     <hr>
