--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -228,7 +228,7 @@
     </div>
     <hr>
     <p class="text-center"><i class="fas fa-star"></i> حقوق النشر محفوظة لمجموعة G4Fit التجارية &copy @DateTime.UtcNow.Year</p>
-    <p class="text-center">Powered by <a href="https://project-eg.com" target="_blank">Project-Egy</a></p>
+    @*<p class="text-center">Powered by <a href="https://project-eg.com" target="_blank">Project-Egy</a></p>*@
 </footer>
 
 <!--
