--- a/Cocoon/Views/Services/Create.cshtml
+++ b/Cocoon/Views/Services/Create.cshtml
@@ -135,7 +135,7 @@
 
                                         <div class="col-sm-7">
                                             <div class="input-group">
-                                                @Html.CheckBoxFor(model => model.IsTimeBoundService, new { @class = "", required = true, @id = "IsTimeBoundService", onchange = "updateLabel()" })
+                                                @Html.CheckBoxFor(model => model.IsTimeBoundService, new { @class = "", @id = "IsTimeBoundService", onchange = "updateLabel()" })
                                             </div>
                                             @Html.ValidationMessageFor(d => d.IsTimeBoundService, "", new { @class = "text-danger" })
                                         </div>
