--- a/Cocoon/Views/Services/View.cshtml
+++ b/Cocoon/Views/Services/View.cshtml
@@ -8,8 +8,8 @@
     <nav aria-label="breadcrumb" dir="auto">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i>@(culture == "ar" ? "الصفحة الرئيسية" : "Home")</a></li>
-            <li class="breadcrumb-item"><a href="@Url.Action("View", "Categories", new { CatId = Model.SubCategory.CategoryId })">@(culture == "ar" ? Model.SubCategory.Category.NameAr : Model.SubCategory.Category.NameEn)</a></li>
-            <li class="breadcrumb-item"><a href="@Url.Action("View", "Categories", new { CatId = Model.SubCategory.CategoryId, SubId = Model.SubCategoryId })">@(culture == "ar" ? Model.SubCategory.NameAr : Model.SubCategory.NameEn)</a></li>
+            <li class="breadcrumb-item"><a href="@Url.Action("View", "SubCategories", new { CatId = Model.SubCategoryId })">@(culture == "ar" ? Model.SubCategory.NameAr : Model.SubCategory.NameEn)</a></li>
+            @*<li class="breadcrumb-item"><a href="@Url.Action("View", "SubCategories", new { CatId = Model.SubCategoryId, SubId = Model.SubCategoryId })">@(culture == "ar" ? Model.SubCategory.NameAr : Model.SubCategory.NameEn)</a></li>*@
             <li class="breadcrumb-item active" aria-current="page"><a href="@Request.Url">@(culture == "ar" ? Model.NameAr : Model.NameEn)</a></li>
         </ol>
     </nav>
@@ -24,20 +24,6 @@
             <h5><strong>@Website.Price:</strong> @Model.OriginalPrice @Website.SAR</h5>
         }
     </div>
-    @if (culture == "ar")
-    {
-        if (!string.IsNullOrEmpty(Model.DescriptionAr))
-        {
-            <p class="text-right">@Html.Raw(Model.DescriptionAr.Replace("\r\n", "<br />"))</p>
-        }
-    }
-    else
-    {
-        if (!string.IsNullOrEmpty(Model.DescriptionEn))
-        {
-            <p class="text-left">@Html.Raw(Model.DescriptionEn.Replace("\r\n", "<br />"))</p>
-        }
-    }
     @if (Model.Images != null && Model.Images.Count(s => s.IsDeleted == false) > 0)
     {
         <section class="main_carousel">
@@ -45,12 +31,31 @@
                 <div class="carousel-inner">
                     @foreach (var image in Model.Images.Where(s => s.IsDeleted == false))
                     {
-                        <div class="carousel-item"><img style="object-fit:contain" src="~/Content/Images/Services/@image.ImageUrl" width="100%" height="100%"></div>
+                        <div class="carousel-item"><img style="object-fit:contain" src="~/Content/Images/Services/@image.ImageUrl" width="75%" height="75%"></div>
                     }
                 </div><a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#main_slider" role="button" data-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="sr-only">next</span></a>
             </div>
         </section>
     }
+    @if (culture == "ar")
+    {
+        if (!string.IsNullOrEmpty(Model.DescriptionAr))
+        {
+            <div dir="rtl" style="text-align: right;">
+                @Html.Raw(Model.DescriptionAr.Replace("\r\n", "<br />"))
+            </div>
+        }
+    }
+    else
+    {
+        if (!string.IsNullOrEmpty(Model.DescriptionEn))
+        {
+            <div dir="ltr" style="text-align: left;">
+                @Html.Raw(Model.DescriptionEn.Replace("\r\n", "<br />"))
+            </div>
+        }
+    }
+
     @if (!Model.IsTimeBoundService)
     {
         <div class="col-xs-12 col-md-12 text-center m-auto">
