--- a/Cocoon/Views/SubCategories/Index.cshtml
+++ b/Cocoon/Views/SubCategories/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@model G4Fit.Models.Domains.SubCategory
 @{
     ViewBag.Title = "اقسام التطبيق الفرعيه";
+    ViewBag.Title = "اقسام التطبيق ";
     var SubCategories = ViewBag.SubCategories as List<G4Fit.Models.Domains.SubCategory>;
-    var Categories = ViewBag.Categories as List<G4Fit.Models.Domains.Category>;
+    //var Categories = ViewBag.Categories as List<G4Fit.Models.Domains.Category>;
     Layout = "~/Views/Dashboard/Layout.cshtml";
 }
 
@@ -17,7 +18,7 @@
             <div class="panel panel-success">
                 <div class="panel-heading collapsed" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <h4 class="panel-title">
-                        <a><i class="fa fa-fw fa-plus"></i> إضافة قسم فرعى</a>
+                        <a><i class="fa fa-fw fa-plus"></i> إضافة قسم @*فرعى*@</a>
                     </h4>
                 </div>
 
@@ -51,7 +52,7 @@
                             </div>
 
                             <div class="row" style="margin:10px">
-                                <div class="col-lg-6">
+                                @*<div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="CategoryId" class="col-sm-5 control-label required">القسم الرئيسى:</label>
                                         <div class="col-sm-7">
@@ -63,7 +64,7 @@
                                            </select>
                                         </div>
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="Image" class="col-sm-5 control-label required">صوره القسم:</label>
@@ -101,7 +102,7 @@
                     <tr>
                         <th>الترتيب</th>
                         <th>اسم القسم</th>
-                        <th>القسم الرئيسى</th>
+                        @*<th>القسم الرئيسى</th>*@
                         <th>الصوره</th>
                         <th>الخدمات</th>
                         <th>التحكم</th>
@@ -117,9 +118,9 @@
                                 <br />
                                 @Html.DisplayFor(modelItem => item.NameEn)
                             </td>
-                            <td>
+                            @*<td>
                                 @item.Category.NameAr
-                            </td>
+                            </td>*@
                             <td>
                                 @if (!string.IsNullOrEmpty(item.ImageUrl))
                                 {
