--- a/Cocoon/Views/Orders/Details.cshtml
+++ b/Cocoon/Views/Orders/Details.cshtml
@@ -202,7 +202,10 @@
                                             <span>الدفع كاش</span>
                                             break;
                                         case G4Fit.Models.Enums.PaymentMethod.Online:
-                                            <span>الدفع اون لاين</span>
+                                            <span>الدفع اون لاين - يور واي</span>
+                                            break;
+                                        case G4Fit.Models.Enums.PaymentMethod.Tabby:
+                                            <span>الدفع اون لاين - تابي</span>
                                             break;
                                     }
                                 </td>
