--- a/Cocoon/Views/Services/Create.cshtml
+++ b/Cocoon/Views/Services/Create.cshtml
@@ -53,7 +53,7 @@
                                                     <option value="@category.Id">@category.NameAr - @category.Category.NameAr</option>
                                                 }
                                             </select>
-                                            @Html.ValidationMessageFor(d => d.CategoryId, "", new { @class = "text-danger" })
+                                            @Html.ValidationMessageFor(d => d.SubCategoryId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
