--- a/Cocoon/Views/Services/Edit.cshtml
+++ b/Cocoon/Views/Services/Edit.cshtml
@@ -52,10 +52,10 @@
                                             <select name="CategoryId" id="CategoryId" class="select2 form-control" required>
                                                 @foreach (var category in Categories.OrderBy(w => w.Category.NameAr).ThenBy(s => s.NameAr))
                                                 {
-                                                    <option @(Model.CategoryId == category.Id ? "selected" : "") value="@category.Id">@category.NameAr - @category.Category.NameAr</option>
+                                                    <option @(Model.SubCategoryId == category.Id ? "selected" : "") value="@category.Id">@category.NameAr - @category.Category.NameAr</option>
                                                 }
                                             </select>
-                                            @Html.ValidationMessageFor(d => d.CategoryId, "", new { @class = "text-danger" })
+                                            @Html.ValidationMessageFor(d => d.SubCategoryId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
